synthizer-sys/synthizer-vendored/include/synthizer.h

/*
 * Note to maintainers: C API methods that obviously go with  a type live in the main .cpp file for that type, even if it is necessary to introduce a cpp file for that type to hold the C API (i.e. pure abstract classes).
 * 
 * Other methods are in src/c_api.cpp (i.e. generic property setters, initialization, etc.).
 * */

/*
 * A handle to any Synthizer object. Always nonzero.
 * */
typedef unsigned long long syz_Handle;
/*
 * An error. code. Specific error constants TBD. 0 means success.
 * */
typedef int syz_ErrorCode;
/*
 * Event payloads.
 *
 * Note to maintainers: pulling these out to a separate header breaks at least autopxd, and possibly other bindings generators.
 * */

struct syz_Event {
	int type;
	syz_Handle source;
	/**
	 *  * Can be 0. The context of the event, if any.
	 * */
	syz_Handle context;
};
/**
 * Free any resources associated with an event.
 * */
SYZ_CAPI void syz_eventDeinit(struct syz_Event *event);
enum SYZ_LOGGING_BACKEND {
	SYZ_LOGGING_BACKEND_NONE,
	SYZ_LOGGING_BACKEND_STDERR,
};
enum SYZ_LOG_LEVEL {
	SYZ_LOG_LEVEL_ERROR = 0,
	SYZ_LOG_LEVEL_WARN = 10,
	SYZ_LOG_LEVEL_INFO = 20,
	SYZ_LOG_LEVEL_DEBUG = 30,
};
struct syz_LibraryConfig {
	unsigned int log_level;
	unsigned int logging_backend;
	/**
	 * If non-NULL, load libsndfile from the specified path.
	 * If libsndfile is requested and fails to load, initialization of the library also fails.
	 * */
	const char *libsndfile_path;
};
/**
 * Set the default values of the LibraryConfig struct, which are not necessarily all 0.
 * */
SYZ_CAPI void syz_libraryConfigSetDefaults(struct syz_LibraryConfig *config);
/*
 * Library initialization and shutdown.
 * */
SYZ_CAPI syz_ErrorCode syz_initialize(void);
	
SYZ_CAPI syz_ErrorCode syz_initializeWithConfig(const struct syz_LibraryConfig *config);
SYZ_CAPI syz_ErrorCode syz_shutdown();
/*
 * Get the current error code for this thread. This is like errno, except that functions also return their error codes.
 * 
 * If the last function succeeded, the return value is undefined.
 * */
SYZ_CAPI syz_ErrorCode syz_getLastErrorCode(void);
/*
 * Get the message associated with the last error for this thread. The pointer is valid only
 * until the next call into Synthizer by this thread.
 * 
 * If the last function succeeded, the return value is undefined.
 * */
SYZ_CAPI const char *syz_getLastErrorMessage(void);
/**
 * Increment and decrement the reference count on a C handle.
 * 
 * Handles are no longer valid when the reference count reaches 0.  All handles returned from a create function
 * have a reference count of 1.
 * */
SYZ_CAPI syz_ErrorCode syz_handleIncRef(syz_Handle handle);
SYZ_CAPI syz_ErrorCode syz_handleDecRef(syz_Handle handle);
struct syz_DeleteBehaviorConfig {
	/**
	 * Configure this object to linger.  For instance, causes
	 * buffer generators to not delete themselves until they finish playing their current buffer. behavior
	 * is object specific.
	 * */
	int linger;
	/**
	 * If nonzero, set the time the object is allowed to linger for. After this timeout,
	 * the object is force deleted 
	 * */
	double linger_timeout;
};
SYZ_CAPI void syz_initDeleteBehaviorConfig(struct syz_DeleteBehaviorConfig *cfg);
SYZ_CAPI syz_ErrorCode syz_configDeleteBehavior(syz_Handle object, struct syz_DeleteBehaviorConfig *cfg);
/**
 * Query the type of a handle. Returns one of the SYZ_OTYPE constants.
 * */
SYZ_CAPI syz_ErrorCode syz_handleGetObjectType(int *out, syz_Handle handle);
typedef void syz_UserdataFreeCallback(void *);
/**
 * pause/play objects. Supported by everything that produces audio in some fashion: generators, sources, context, etc.
 * */
SYZ_CAPI syz_ErrorCode syz_pause(syz_Handle object);
SYZ_CAPI syz_ErrorCode syz_play(syz_Handle object);
/*
 * Property getters and setters.
 * 
 * See synthizer_constants.h for the constants, and the manual for property definitions.
 * 
 * Note: getters are slow and should only be used for debugging. Synthizer doesn't guarantee that the values returned by getters are what you most
 * immediately set; they are merely some recent value. More advanced library features which introduce deferred setting and transaction-like behavior will break even this guarantee if enabled.
 * If you need to compute values based off what you last set a property to, save it outside Synthizer and do the computation there.
 * */

/* Integer. */
SYZ_CAPI syz_ErrorCode syz_getI(int *out, syz_Handle target, int property);
SYZ_CAPI syz_ErrorCode syz_setI(syz_Handle target, int property, int value);
/* Double. */
SYZ_CAPI syz_ErrorCode syz_getD(double *out, syz_Handle target, int property);
SYZ_CAPI syz_ErrorCode syz_setD(syz_Handle target, int property, double value);
/* Object properties. */
SYZ_CAPI syz_ErrorCode syz_setO(syz_Handle target, int property, syz_Handle value);
/*
 * double3 and double6 are used for positions and orientations respectively.
 * Double3 is { x, y, z }
 * Double6 is { forward, up }
 * Note that Synthizer's coordinate system is right-handed.
 * */
SYZ_CAPI syz_ErrorCode syz_getD3(double *x, double *y, double *z, syz_Handle target, int property);
SYZ_CAPI syz_ErrorCode syz_setD3(syz_Handle target, int property, double x, double y, double z);
SYZ_CAPI syz_ErrorCode syz_getD6(double *x1, double *y1, double *z1, double *x2, double *y2, double *z2, syz_Handle target, int property);
SYZ_CAPI syz_ErrorCode syz_setD6(syz_Handle handle, int property, double x1, double y1, double z1, double x2, double y2, double z2);
/*
 * Biquad properties are biquad filters from the audio eq cookbook.
 * 
 * Note to maintainers: the C API is in src/filter_properties.cpp (except for syz_setBiquad, in c_api.cpp with the other property setters).
 * */

/*
 * Configuration for a filter. Currently this struct should be treated as opaque. It's exposed here
 * in order to allow allocating them on the stack.  Changes to the layout and fields may occur without warning.
 * 
 * To initialize this struct, use one of the syz_BiquadDesignXXX functions, below.
 * */
struct syz_BiquadConfig {
	double _b0, _b1, _b2;
	double _a1, _a2;
	double _gain;
	unsigned char _is_wire;
};