synthizer-sys/src/synthizer.rs

/* automatically generated by rust-bindgen 0.58.1 */

extern "C" {
    pub fn syz_getVersion(
        major: *mut ::std::os::raw::c_uint,
        minor: *mut ::std::os::raw::c_uint,
        patch: *mut ::std::os::raw::c_uint,
    );
}
pub type syz_Handle = ::std::os::raw::c_ulonglong;
pub type syz_ErrorCode = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_UserAutomationEvent {
    pub param: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_syz_UserAutomationEvent() {
    assert_eq!(
        ::std::mem::size_of::<syz_UserAutomationEvent>(),
        8usize,
        concat!("Size of: ", stringify!(syz_UserAutomationEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_UserAutomationEvent>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_UserAutomationEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_UserAutomationEvent>())).param as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_UserAutomationEvent),
            "::",
            stringify!(param)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct syz_Event {
    pub type_: ::std::os::raw::c_int,
    pub source: syz_Handle,
    pub context: syz_Handle,
    pub payload: syz_Event__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union syz_Event__bindgen_ty_1 {
    pub user_automation: syz_UserAutomationEvent,
}
#[test]
fn bindgen_test_layout_syz_Event__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<syz_Event__bindgen_ty_1>(),
        8usize,
        concat!("Size of: ", stringify!(syz_Event__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_Event__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_Event__bindgen_ty_1))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_Event__bindgen_ty_1>())).user_automation as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_Event__bindgen_ty_1),
            "::",
            stringify!(user_automation)
        )
    );
}
impl Default for syz_Event__bindgen_ty_1 {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[test]
fn bindgen_test_layout_syz_Event() {
    assert_eq!(
        ::std::mem::size_of::<syz_Event>(),
        32usize,
        concat!("Size of: ", stringify!(syz_Event))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_Event>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_Event))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_Event>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_Event),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_Event>())).source as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_Event),
            "::",
            stringify!(source)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_Event>())).context as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_Event),
            "::",
            stringify!(context)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_Event>())).payload as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_Event),
            "::",
            stringify!(payload)
        )
    );
}
impl Default for syz_Event {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn syz_eventDeinit(event: *mut syz_Event);
}
pub const SYZ_LOGGING_BACKEND_NONE: SYZ_LOGGING_BACKEND = 0;
pub const SYZ_LOGGING_BACKEND_STDERR: SYZ_LOGGING_BACKEND = 1;
pub type SYZ_LOGGING_BACKEND = ::std::os::raw::c_uint;
pub const SYZ_LOG_LEVEL_ERROR: SYZ_LOG_LEVEL = 0;
pub const SYZ_LOG_LEVEL_WARN: SYZ_LOG_LEVEL = 10;
pub const SYZ_LOG_LEVEL_INFO: SYZ_LOG_LEVEL = 20;
pub const SYZ_LOG_LEVEL_DEBUG: SYZ_LOG_LEVEL = 30;
pub type SYZ_LOG_LEVEL = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct syz_LibraryConfig {
    pub log_level: ::std::os::raw::c_uint,
    pub logging_backend: ::std::os::raw::c_uint,
    pub libsndfile_path: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_syz_LibraryConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_LibraryConfig>(),
        16usize,
        concat!("Size of: ", stringify!(syz_LibraryConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_LibraryConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_LibraryConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_LibraryConfig>())).log_level as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_LibraryConfig),
            "::",
            stringify!(log_level)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_LibraryConfig>())).logging_backend as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_LibraryConfig),
            "::",
            stringify!(logging_backend)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_LibraryConfig>())).libsndfile_path as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_LibraryConfig),
            "::",
            stringify!(libsndfile_path)
        )
    );
}
impl Default for syz_LibraryConfig {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn syz_libraryConfigSetDefaults(config: *mut syz_LibraryConfig);
}
extern "C" {
    pub fn syz_initialize() -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_initializeWithConfig(config: *const syz_LibraryConfig) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_shutdown() -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_getLastErrorCode() -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_getLastErrorMessage() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn syz_handleIncRef(handle: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_handleDecRef(handle: syz_Handle) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_DeleteBehaviorConfig {
    pub linger: ::std::os::raw::c_int,
    pub linger_timeout: f64,
}
#[test]
fn bindgen_test_layout_syz_DeleteBehaviorConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_DeleteBehaviorConfig>(),
        16usize,
        concat!("Size of: ", stringify!(syz_DeleteBehaviorConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_DeleteBehaviorConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_DeleteBehaviorConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_DeleteBehaviorConfig>())).linger as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_DeleteBehaviorConfig),
            "::",
            stringify!(linger)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_DeleteBehaviorConfig>())).linger_timeout as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_DeleteBehaviorConfig),
            "::",
            stringify!(linger_timeout)
        )
    );
}
extern "C" {
    pub fn syz_initDeleteBehaviorConfig(cfg: *mut syz_DeleteBehaviorConfig);
}
extern "C" {
    pub fn syz_configDeleteBehavior(
        object: syz_Handle,
        cfg: *const syz_DeleteBehaviorConfig,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_handleGetObjectType(
        out: *mut ::std::os::raw::c_int,
        handle: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_handleGetUserdata(
        out: *mut *mut ::std::os::raw::c_void,
        handle: syz_Handle,
    ) -> syz_ErrorCode;
}
pub type syz_UserdataFreeCallback =
    ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>;
extern "C" {
    pub fn syz_handleSetUserdata(
        handle: syz_Handle,
        userdata: *mut ::std::os::raw::c_void,
        free_callback: syz_UserdataFreeCallback,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_pause(object: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_play(object: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_getI(
        out: *mut ::std::os::raw::c_int,
        target: syz_Handle,
        property: ::std::os::raw::c_int,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_setI(
        target: syz_Handle,
        property: ::std::os::raw::c_int,
        value: ::std::os::raw::c_int,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_getD(
        out: *mut f64,
        target: syz_Handle,
        property: ::std::os::raw::c_int,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_setD(
        target: syz_Handle,
        property: ::std::os::raw::c_int,
        value: f64,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_setO(
        target: syz_Handle,
        property: ::std::os::raw::c_int,
        value: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_getD3(
        x: *mut f64,
        y: *mut f64,
        z: *mut f64,
        target: syz_Handle,
        property: ::std::os::raw::c_int,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_setD3(
        target: syz_Handle,
        property: ::std::os::raw::c_int,
        x: f64,
        y: f64,
        z: f64,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_getD6(
        x1: *mut f64,
        y1: *mut f64,
        z1: *mut f64,
        x2: *mut f64,
        y2: *mut f64,
        z2: *mut f64,
        target: syz_Handle,
        property: ::std::os::raw::c_int,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_setD6(
        handle: syz_Handle,
        property: ::std::os::raw::c_int,
        x1: f64,
        y1: f64,
        z1: f64,
        x2: f64,
        y2: f64,
        z2: f64,
    ) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_BiquadConfig {
    pub _b0: f64,
    pub _b1: f64,
    pub _b2: f64,
    pub _a1: f64,
    pub _a2: f64,
    pub _gain: f64,
    pub _is_wire: ::std::os::raw::c_uchar,
}
